--- a/fronent/package.json
+++ b/fronent/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,5 +44,6 @@
     "antd": "^5.17.3",
     "axios": "^1.7.2",
     "react-router-dom": "^6.23.1"
-  }
+  },
+  "proxy": "http://127.0.0.1:8000"
 }
